--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,11 @@
     font-size: 18px;
 }
 
+.header{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: whitesmoke;
+    padding: 30px;
+    text-align: center;
+    font-size: 30px;
+}
 
