--- a/Home/home.css
+++ b/Home/home.css
@@ -6,7 +6,7 @@
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr 200px 1fr;
+    grid-template-columns: 1fr 200px 1fr 50px 1fr;
     grid-template-rows: 50px 50px ;
     place-items: center;
 }
