--- a/Home/home.css
+++ b/Home/home.css
@@ -3,7 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+.class {
+    display:flex;
+  
+}
 .grid {
     display: grid;
     grid-template-columns: 1fr 200px 1fr 50px 1fr;
