--- a/Home/home.css
+++ b/Home/home.css
@@ -1,8 +1,8 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
+
 .class {
     display:flex;
   
@@ -51,10 +51,17 @@ body {
 }
 
 .container {
-    width: 80%;
-    height: 600px;
+    width: 100%;
+    height: 100vh;
+    background-image: url(logo.jpg);
     padding: 20px;
     color: whitesmoke;
     position: relative;
     column-count: 2;
+}
+
+img {
+    height: 200px;
+    align-content: center;
+    align-items: center;
 }
