--- a/Home/home.css
+++ b/Home/home.css
@@ -51,9 +51,8 @@ body {
 }
 
 .container {
-    width: 100%;
-    height: 100vh;
-    background-image: url(logo.jpg);
+    width: 70%;
+    height: 500px;
     padding: 20px;
     color: whitesmoke;
     position: relative;
