--- a/Contacts/contact.css
+++ b/Contacts/contact.css
@@ -37,6 +37,11 @@ h1 {
     }
 }
 
+.table{
+    justify-content: center;
+    padding: 150px;
+    margin: 150px;
+}
 .table-section {
    
     justify-content: space-around;
@@ -58,7 +63,7 @@ body {
 .container {
     width: 100%;
     height: 300px;
-    padding: 20px;
+    padding: 10px;
     color: whitesmoke;
     position: relative;
     column-count: 2;
