--- a/Home/home.css
+++ b/Home/home.css
@@ -3,13 +3,14 @@
     margin: 0;
 }
 
+
 .class {
     display:flex;
   
 }
 .grid {
     display: grid;
-    grid-template-columns: 1fr 200px 1fr 50px 1fr;
+    grid-template-columns: 1fr 100px 1fr 50px 1fr 50px ;
     grid-template-rows: 50px 50px ;
     place-items: center;
 }
@@ -56,6 +57,6 @@ body {
     padding: 20px;
     color: whitesmoke;
     position: relative;
-    column-count: 2;
+   
 }
 
