--- a/Home/home.css
+++ b/Home/home.css
@@ -1,62 +1,5 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
-
-.class {
-    display:flex;
-  
-}
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 100px 1fr 50px 1fr 50px ;
-    grid-template-rows: 50px 50px ;
-    place-items: center;
-}
-
-.main{
-    padding: 20px;
-    font-size: 18px;
-}
-
-.header{
-    font-family: Cambria;
-    color: whitesmoke;
-    padding: 30px;
-    text-align: center;
-    font-size: 30px;
-}
-
-h1 {
-    text-align: left;
-
-}
-
-@media screen and (max-width: 600px){
-    .column {
-        width:100%;
-    
-    }
-}
-
-body {
-    background-color: rgb(255, 0, 174);
-    background: linear-gradient(rgb(32, 229, 176),rgb(21, 137, 13));
-    display: grid;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: sans-serif;
-}
-
-.container {
-    width: 70%;
-    height: 500px;
-    padding: 20px;
-    color: whitesmoke;
-    position: relative;
-   
+.navbar{
+ padding:0;
+ margin:0;
 }
 
