--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -9,7 +10,7 @@
 
 
 .header{
-    font-family: Cambria;
+  
     color: whitesmoke;
     padding: 30px;
     text-align: center;
