--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -17,11 +17,7 @@
     font-size: 30px;
 }
 
-h1 {
-    text-align: left;
-    
 
-}
 
 @media screen and (max-width: 600px){
     .column {
@@ -32,11 +28,27 @@ h1 {
 
 body {
     background-color: rgb(240, 12, 240);
-    background: linear-gradient(rgb(235, 8, 201),rgb(235, 10, 220));
-    display: grid;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    display: flex;
     flex-direction: column;
     justify-content: center;
+    padding:10px;
     align-items: center;
     height: 100vh;
     font-family: sans-serif;
+}
+
+.container .title{
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.container{
+    max-width: 700px;
+    padding:25px 30px;
+    width: 100%;
+    background:#fff;
+    border-radius: 5px;
+
+    
 }
