--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -62,6 +62,7 @@ body {
 
 .container form .user-details{
     display:flex;
+    margin: 20px 0 12px 0;
     flex-wrap: wrap;
     justify-content: space-between;
 
@@ -69,7 +70,7 @@ body {
 
 form .user-details .input-box{
     width: calc(100%/ 2 - 20px);
-    margin: 20px 0 12px 0;
+   margin-bottom:15px;
 }
 
 .user-details .input-box .details{
@@ -77,11 +78,14 @@ form .user-details .input-box{
     margin-bottom: 5px
     display: block;
 }
+
 .user-details .input-box input{
     height: 45px;
     width: 100%;
     outline: none;
     border-radius: 5px;
     border: 1px solid #ccc;
+    padding-left:15px;
+    font-size:16px;
 
 }
