Styling the Registration Form

--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -75,7 +75,7 @@ form .user-details .input-box{
 
 .user-details .input-box .details{
     font-weight:500;
-    margin-bottom: 5px
+    margin-bottom: 5px;
     display: block;
 }
 
@@ -87,5 +87,10 @@ form .user-details .input-box{
     border: 1px solid #ccc;
     padding-left:15px;
     font-size:16px;
+
+}
+
+.user-details .input-box input:focus,
+.user-details .input-box input:valid{
 
 }
