--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -105,8 +105,18 @@ form .gender-details .gender-title{
 form .gender-details .category{
     width: 80%;
     display: flex;
+    margin: 14px 0;
     justify-content: space-between;
     background: pink;
 }
 
+.gender-details .category label{
+
+}
+
+.gender-details .category .dot{
+    height: 18px;
+    width: 18px;
+    background: lightpink;
+}
 
