--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -111,12 +111,16 @@ form .gender-details .category{
 }
 
 .gender-details .category label{
-
+        display:flex;
+        align-items: center;
 }
 
 .gender-details .category .dot{
     height: 18px;
     width: 18px;
- 
+    background: lightblue;
+    border-radius: 50%;
+    margin-right: 10px;
+    border: 5px solid pink;
 }
 
