--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -122,11 +122,12 @@ form .gender-details .category{
     border-radius: 50%;
     margin-right: 10px;
     border: 5px solid transparent;
+    transition: all 0.3s ease;
 }
 
 #dot-1:checked ~ .category label .one,
 #dot-2:checked ~ .category label .two,
-#dot-3:checked ~ .category label .three,{
+#dot-3:checked ~ .category label .three{
         border-color:#9b59b6;
         background:#71b7e6;
 }
@@ -134,3 +135,25 @@ form .gender-details .category{
 form input[type="radio"]{
     display: none;
 }
+
+form .button{
+    height: 45px;
+    margin: 45px 0;
+}
+
+form .button input{
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: 400;
+    outline: none;
+    color: black;
+    background: linear-gradient(135deg, #9b59b6, #71b7e6);
+}
+
+form .button input:hover{
+    background: linear-gradient(-135deg, #9b59b6, #71b7e6);
+}
+
