--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -19,10 +19,13 @@
 
 
 
-@media screen and (max-width: 600px){
-    .column {
-        width:100%;
-    
+@media (max-width: 600px){
+    .container {
+       max-width:100%;
+    }
+    form .user-details .input-box{
+        margin-bottom: 15px;
+        width: 100%;
     }
 }
 
