--- a/Contacts/contact.css
+++ b/Contacts/contact.css
@@ -2,69 +2,41 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 200px 1fr;
-    grid-template-rows: 50px 50px ;
-    place-items: center;
-}
-
-.main{
-    padding: 20px;
-    font-size: 18px;
-}
-
-.header{
-    font-family: Cambria;
-    color: whitesmoke;
-    padding: 30px;
-    text-align: center;
-    font-size: 30px;
-}
-
-h1 {
-    text-align: left;
-    
-
-}
-
-@media screen and (max-width: 600px){
-    .column {
-        width:100%;
-    
-    }
-}
-
-.table{
-    justify-content: center;
-    padding: 150px;
-    margin: 150px;
-}
-.table-section {
-   
-    justify-content: space-around;
-    padding: 10px;
-    margin: 10px;
-}
 
 body {
-    background-color: rgb(236, 178, 17);
-    background: linear-gradient(rgb(216, 90, 22),rgb(237, 117, 4));
-    display: grid;
+    background-color: rgb(240, 12, 240);
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    display: flex;
     flex-direction: column;
     justify-content: center;
+    padding:10px;
     align-items: center;
     height: 100vh;
     font-family: sans-serif;
 }
 
-.container {
-    width: 100%;
-    height: 300px;
-    padding: 10px;
-    color: whitesmoke;
-    position: relative;
-    column-count: 2;
+.contact-box{
+    background:#fff;
+    display: flex;
 }
+
+.contact-left{
+    flex-basis: 60%;
+    padding: 40px 60px;
+    background: #9b59b6;
+}
+
+.contact-right{
+    flex-basis: 40%;
+    padding: 40px;
+    background: #71b7e6;
+}
+
+h1{
+    margin-bottom: 10px;
+}
+
+
