--- a/Contacts/contact.css
+++ b/Contacts/contact.css
@@ -4,7 +4,11 @@
     box-sizing: border-box;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
+.container{
+    width:100%;
+    min-height:100vh;
+    background:linear-gradient(#71b7e6, #9b59b6);
+}
 
 body {
     background-color: rgb(240, 12, 240);
@@ -19,24 +23,73 @@ body {
 }
 
 .contact-box{
-    background:#fff;
+   
     display: flex;
 }
 
 .contact-left{
-    flex-basis: 60%;
-    padding: 40px 60px;
-    background: #9b59b6;
+    flex-basis: 40%;
+    padding: 20px 10px 20px;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 
 .contact-right{
     flex-basis: 40%;
     padding: 40px;
-    background: #71b7e6;
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 
 h1{
     margin-bottom: 10px;
 }
 
+.container p{
+    margin-bottom: 30px;
+}
+
+.input-row{
+    display:flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+
+textarea{
+    width:100%;
+    border: 1px solid #ccc;
+    outline:none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+label{
+    margin-bottom: 6px;
+    display:block;
+}
+
+button {
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    width:100px;
+    border:border-box;
+    outline:none;
+    color:#fff;
+    height:35px;
+    border-radius: 30px;
+    margin-top: 20px;
+    
+}
+
+
+.contact-right h3{
+   background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    font-weight: 600;
+    margin-bottom: 30px;
+    
+}
+
+
+tr rd:first-child{
+    padding-right: 20px;
+
+}
 
