--- a/Home/home.css
+++ b/Home/home.css
@@ -2,10 +2,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 19px;
 }
 
 .navbar{
     width: 100%;
+    justify-content: space-around;
 }
 
 
